# Plenary-Osprey-Pokemon

./: .gitignore  CMakeLists.txt  PlenaryOspreyPokemonEngine  README.md
Resources/: ribbons.csv
src/: Abilities.h  CMakeLists.txt  Defines.h  EggGroup.h  Generation.h  Move.cpp  Move.h  MoveFlag.h  Pokemon_GenIII.cpp  Type.cpp  Type.h  definitions.cpp  definitions.h  main.cpp  makefile
src/Battles/: BattleHandler.cpp  BattleHandler.h  CMakeLists.txt
src/Damage_Class/: Damage_Class.cpp  Damage_Class.h
src/Items/: CMakeLists.txt  Item.cpp  Item.h
src/Language/: CMakeLists.txt  Language.cpp  Language.h
src/Move/: Move.cpp  Move.h  Move_Damage_Class.cpp  Move_Damage_Class.h  Move_Metadata.cpp  Move_Metadata.h
src/Pokemon/: CMakeLists.txt  Evolution.h  Pokemon.cpp  Pokemon.h
src/Pokemon/Ability/: Ability.cpp  Ability.h  CMakeLists.txt
src/Pokemon/Move/: CMakeLists.txt  Move.cpp  Move.h  Move_Damage_Class.cpp  Move_Metadata.cpp  Move_Metadata.h
src/Pokemon/Pokedex/: EggGroup.h
src/Pokemon/Type/: CMakeLists.txt  Type.cpp  Type.h  TypeEfficiency.cpp  TypeEfficiency.h
src/Ribbon/: CMakeLists.txt  Ribbon.cpp  Ribbon.h
src/Trainer/: Badges.cpp  Badges.h  CMakeLists.txt  Player.h
src/Type/: Type.cpp  Type.h  TypeEfficiency.cpp  TypeEfficiency.h
src/TypeEfficiency/: TypeEfficiency.cpp  TypeEfficiency.h
src/old/: Abilities.cpp  Berry.h  EggGroup.h  Item.h  Item_GenIII.cpp  Item_GenIII.h  MoveFlag.h  Pokemon.cpp  Pokemon.h  Pokemon_GenIII.h  Targets.h  main.cpp
